--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,49 +2,9 @@ set-option -g prefix C-Space
 unbind C-Space
 bind C-Space send-prefix
 
-# Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
-
-# don't rename windows automatically
-set-option -g allow-rename off
-
-
-######################
-### DESIGN CHANGES ###
-######################
-
-# panes
-set -g pane-border-fg black
-set -g pane-active-border-fg brightred
-
-## Status bar design
-# status line
-set -g status-justify left
-set -g status-bg default
-set -g status-fg colour10
-set -g status-interval 2
-
-# messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg red
-set -g message-command-bg black
-
-#window mode
-setw -g mode-bg colour2
-setw -g mode-fg colour0
-
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=colour46]#[bg=black] #I #[bg=red]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour46] #W "
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour11
-setw -g window-status-current-attr dim
-setw -g window-status-bg green
-setw -g window-status-fg black
-setw -g window-status-attr reverse
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Info on left (I don't have a session display for now)
 set -g status-left ''
@@ -60,53 +20,38 @@ set -g default-terminal "screen-256color"
 
 # The modes {
 setw -g clock-mode-colour colour135
-setw -g mode-attr bold
-setw -g mode-fg colour196
-setw -g mode-bg colour238
+setw -g mode-style fg=colour196,bg=colour238,bold
 
 # }
 # The panes {
 
-set -g pane-border-bg colour235
-set -g pane-border-fg colour238
-set -g pane-active-border-bg colour236
-set -g pane-active-border-fg colour46
+set -g pane-border-style bg=colour235,fg=colour238
+set -g pane-active-border-style bg=colour236,fg=colour46
 
 # }
 # The statusbar {
 
 set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
-set -g status-attr dim
+set -g status-style bg=colour234,fg=colour137
+set -g status-style dim
 set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-fg colour82
-setw -g window-status-current-bg colour238
-setw -g window-status-current-attr bold
+setw -g window-status-current-style bg=colour238,fg=colour82,bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour46]#F '
 
-setw -g window-status-fg colour138
-setw -g window-status-bg colour235
-setw -g window-status-attr none
+setw -g window-status-style fg=colour138,bg=colour235,none
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style bg=colour1,fg=colour255,bold
 
 # }
 # The messages {
 
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
+set -g message-style fg=colour232,bg=colour166,bold
 
 # }
 
-
-run-shell ~/clone/path/resurrect.tmux
-
+run '~/.tmux/plugins/tpm/tpm'
