--- a/.config/libinput-gestures.conf
+++ b/.config/libinput-gestures.conf
@@ -115,8 +115,13 @@ gesture swipe right	xdotool key alt+Right
 ###############################################################################
 
 # GNOME SHELL open/close overview (works for GNOME on Xorg only)
-gesture pinch in	xdotool key super+s
-gesture pinch out	xdotool key super+s
+#gesture pinch in	xdotool key super+s
+#gesture pinch out	xdotool key super+s
+
+# Zoom in out with pinch moves
+gesture pinch   in    2  xdotool key ctrl+minus
+gesture pinch   out   2  xdotool key ctrl+plus
+
 
 # GNOME SHELL open/close overview (works for GNOME on Wayland and Xorg)
 # Note since GNOME 3.24 on Wayland this is implemented natively so no
